--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -14,13 +14,40 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name="org.cognitiveio.s180212mappe1.MainActivity"
-            android:label="@string/app_name" >
+            android:name="org.cognitiveio.s180212mappe1.MenuActivity"
+            android:configChanges="orientation|keyboardHidden|screenSize"
+            android:label="@string/app_name"
+            android:theme="@style/FullscreenTheme" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name="org.cognitiveio.s180212mappe1.MainActivity"
+            android:label="@string/app_name"  
+            android:parentActivityName="org.cognitiveio.s180212mappe1.MenuActivity" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="org.cognitiveio.s180212mappe1.MenuActivity" />
+        </activity>
+        
+        <activity
+            android:name="org.cognitiveio.s180212mappe1.RulesActivity"
+            android:label="@string/title_activity_rules"
+            android:parentActivityName="org.cognitiveio.s180212mappe1.MenuActivity" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="org.cognitiveio.s180212mappe1.MenuActivity" />
+        </activity>
+        <activity
+            android:name="org.cognitiveio.s180212mappe1.SetPreferencesActivity"
+            android:label="@string/title_activity_settings"
+            android:parentActivityName="org.cognitiveio.s180212mappe1.MenuActivity" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="org.cognitiveio.s180212mappe1.MenuActivity" />
         </activity>
     </application>
 
